<resources>

    <string name="appName">Phone Found Game</string>
    <string name="titleActivityLockScreen">LockScreen</string>
    <string name="titleActivityMainScreen">MainScreen</string>

    <string name="operator">My Operator</string>
    <string name="batteryPercent">32%</string>
    <string name="hour">23:10</string>
    <string name="date">mar. 18 juillet</string>
    <string name="toUnlock">To unlock, slide !</string>

    <string name="networkBarContentDescription">network status</string>
    <string name="batteryBarContentDescription">battery status</string>

    <string name="phoneIcon">Phone</string>
    <string name="contactIcon">Contact</string>
    <string name="mailIcon">E-Mail</string>
    <string name="messageIcon">Message</string>

    <string name="city">Ma Ville</string>
    <string name="temperature">23°c</string>
    <string name="meteoContentDescription">Meteo Status</string>

</resources>
