<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RelativeOverlap"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/meteoTimePadding"
    android:background="@color/meteoTimeColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"

        android:id="@+id/hour"
        android:textSize="@dimen/extraLargeText"
        android:textColor="@color/foreground"
        android:text="@string/hour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/hour"
        android:layout_alignParentStart="true"

        android:id="@+id/date"
        android:textSize="@dimen/mediumText"
        android:textColor="@color/foreground"
        android:text="@string/date" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"

        android:id="@+id/meteo"
        android:src="@mipmap/sun"
        android:contentDescription="@string/meteoContentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/hour"
        android:layout_alignParentEnd="true"

        android:id="@+id/city"
        android:textSize="@dimen/mediumText"
        android:textColor="@color/foreground"
        android:text="@string/city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/hour"
        android:layout_toStartOf="@+id/meteo"
        android:layout_marginEnd="15dp"

        android:id="@+id/temperature"
        android:textSize="@dimen/largeText"
        android:textColor="@color/foreground"
        android:text="@string/temperature" />

</RelativeLayout>